Fix some base margin-spacing

--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -10,28 +10,9 @@ body *{
 }
 
 #co-tagline {
-	margin-top: 50px;
+	margin-top: 90px;
 }
 
-.rainbow {
-    background: red; /* not working, let's see some red */
-    background: -moz-linear-gradient( top ,
-        rgba(255, 0, 0, .4) 0%,
-        rgba(255, 255, 0, .4) 15%,
-        rgba(0, 255, 0, .4) 30%,
-        rgba(0, 255, 255, .4) 50%,
-        rgba(0, 0, 255, .4) 65%,
-        rgba(255, 0, 255, .4) 80%,
-        rgba(255, 0, 0, .4) 100%);
-    background: -webkit-gradient(linear,  left top,  left bottom, 
-        color-stop(0%, rgba(255, 0, 0, .4)), 
-        color-stop(15%, rgba(255, 255, 0, .4)),
-        color-stop(30%, rgba(0, 255, 0, .4)),
-        color-stop(50%, rgba(0, 255, 255, .4)),
-        color-stop(65%, rgba(0, 0, 255, .4)),
-        color-stop(80%, rgba(255, 0, 255, .4)),
-        color-stop(100%, rgba(255, 0, 0, .4)));
-}
 #footNav li a{
     
     letter-spacing: .1rem;
@@ -48,8 +29,7 @@ body *{
 	text-shadow: 0;
 }
 #footNav li{
-    
-    
+      
     text-shadow: /* Simulating Text Stroke */
         -1px -1px 0 #000, 
         1px -1px 0 #000, 
@@ -101,12 +81,6 @@ body *{
 footer{
    text-align:center;
    width: 100%;
-}
-
-
-footer img{
-   max-width:100px;
-   
 }
 
 .navTab{
@@ -172,6 +146,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9ff4f', end
     color: blanchedalmond !important;
     font-family:  'Roboto Slab', serif !important;
     
+}
+#quickCards {
+	padding: 10px;
 }
 
 #footNav{
